--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@
 }
 
 .container {
-    width: 25%;
+    width: 30%;
     display: flex;
+    align-items: center;
     flex-direction: column;
 }
 
 .header {
     width: 50%;
+    padding-right: 45px;
     padding-top: 50px;
     padding-bottom: 10px;
     color: white;
@@ -34,7 +36,7 @@
     font-size: larger;
     /* width: 100%;
      */
-    width: 70%;
+    width: 60%;
 
     margin-bottom: 15px;
     text-align: end;
@@ -46,7 +48,7 @@
 .calcContainer {
     background-color: #272d42;
     border-radius: 0.2rem;
-    width: 70%;
+    width: 60%;
 
 }
 
